feat: added the progress bar to plan page

--- a/index.html
+++ b/index.html
@@ -21,7 +21,25 @@
         </a>
         <h3 class="header2">Review your plan</h3>
       </div>
-      <nav></nav>
+
+      <div class="progress-bar text-sm">
+        <div class="progress-section">
+          <div class="progress"></div>
+          <div class="progress-step done" progress-title="Sign up">
+            &checkmark;
+          </div>
+          <div class="progress-step inprogress" progress-title="Customise">
+            2
+          </div>
+          <div class="progress-step inactive" progress-title="Pay">
+            3
+          </div>
+          <div class="progress-step inactive">
+            <img src="/assets/icons/apple.svg" alt="Apple" />
+          </div>
+        </div>
+      </div>
+
       <section class="review-detail">
         <h1 class="header1">Review your plan</h1>
         <p class="text-tertiary text-md">
