--- a/index.html
+++ b/index.html
@@ -15,162 +15,11 @@
   </head>
   <body>
     <div class="container">
-      <div class="review-heading">
-        <a href="/confetti.html" class="back-btn">
-          <img src="/assets/icons/arrow-left.svg" alt="arrow-left" class="" />
-        </a>
-        <h3 class="header2">Review your plan</h3>
-      </div>
-
-      <div class="progress-bar text-sm">
-        <div class="progress-section">
-          <div class="progress"></div>
-          <div class="progress-step done" progress-title="Sign up">
-            &checkmark;
-          </div>
-          <div class="progress-step inprogress" progress-title="Customise">
-            2
-          </div>
-          <div class="progress-step inactive" progress-title="Pay">
-            3
-          </div>
-          <div class="progress-step inactive">
-            <img src="/assets/icons/apple.svg" alt="Apple" />
-          </div>
-        </div>
-      </div>
-
-      <section class="review-detail">
-        <h1 class="header1">Review your plan</h1>
-        <p class="text-tertiary text-md">
-          Here's a summary of your Eden life. Let me tell you, your life is
-          about to become waayyy easier.
-        </p>
-      </section>
-      <main class="review-plans">
-        <div class="plan-heading">
-          <p class="text-black text-md">Your Plan Details</p>
-          <button class="text-green text-sm">Add or Remove Services</button>
-        </div>
-        <section class="plans">
-          <div class="food-plan plan">
-            <div class="">
-              <span class="">
-                <img src="/assets/icons/food.svg" alt="" />
-                <div class="">
-                  <p class="text-gray-primary">Food</p>
-                </div>
-              </span>
-              <button class="plan-detail">
-                Expand details
-                <img src="/assets/icons/arrow-down.svg" alt="arrow-down" />
-              </button>
-            </div>
-            <p class="text-sm text-tertiary plan-price">₦27,000</p>
-          </div>
-          <div class="laundry-plan plan">
-            <div class="">
-              <span class="">
-                <img src="/assets/icons/laundry.svg" alt="" />
-                <div class="plan-name">
-                  <p class="text-gray-primary">Laundry</p>
-                </div>
-              </span>
-              <button class="plan-detail">
-                Expand details
-                <img src="/assets/icons/arrow-down.svg" alt="arrow-down" />
-              </button>
-            </div>
-            <p class="text-sm text-tertiary plan-price">₦27,000</p>
-          </div>
-          <div class="cleaning-plan plan">
-            <div class="">
-              <span class="">
-                <img src="/assets/icons/house.svg" alt="" />
-                <div class="plan-name">
-                  <p class="text-gray-primary">Cleaning</p>
-                </div>
-              </span>
-              <button class="plan-detail">
-                Expand details
-                <img src="/assets/icons/arrow-down.svg" alt="arrow-down" />
-              </button>
-            </div>
-            <p class="text-sm text-tertiary plan-price">₦27,000</p>
-          </div>
-          <div class="beauty-plan plan">
-            <div class="">
-              <span class="">
-                <img src="/assets/icons/beauty.svg" alt="" />
-                <div class="plan-name">
-                  <p class="text-gray-primary">Beauty</p>
-                </div>
-              </span>
-              <button class="plan-detail">
-                Expand details
-                <img src="/assets/icons/arrow-down.svg" alt="arrow-down" />
-              </button>
-            </div>
-            <p class="text-sm text-tertiary plan-price">₦27,000</p>
-          </div>
-        </section>
-        <section class="plan-section">
-          <div class="plan-heading">
-            <p class="text-black text-md">Start date</p>
-            <button class="text-green text-sm">Choose your start date</button>
-          </div>
-          <div class="notification-toast warning">
-            <img src="/assets/icons/warning.svg" alt="" />
-            <p class="text-gray-primary text-sm">
-              Choose your start date to pay.
-            </p>
-          </div>
-        </section>
-        <section class="plan-section">
-          <h3 class="header2">Discount Code</h3>
-          <div class="discount-input">
-            <div class="">
-              <input type="text" placeholder="247LOVE4U" name="" id="" />
-              <p class="text-green text-xs">Code successfully applied.</p>
-            </div>
-            <button class="remove-code">Remove code</button>
-          </div>
-        </section>
-        <section>
-          <div class="cost">
-            <div class="subtotal">
-              <p class="text-sm text-gray-primary">Subtotal</p>
-              <p class="text-sm text-gray-primary">₦112,000.00</p>
-            </div>
-            <div class="">
-              <p class="text-sm text-gray-primary">
-                Discount applied (25% off)
-              </p>
-              <p class="text-sm text-green">- ₦28,000</p>
-            </div>
-            <div class="">
-              <p class="text-sm text-gray-primary">Total</p>
-              <p class="text-md text-gray-primary">₦102,000.00</p>
-            </div>
-          </div>
-          <p class="duration text-tertiary">
-            This amount covers your subscription for the next 4 weeks.
-          </p>
-          <div class="notification-toast info">
-            <img src="/assets/icons/info.svg" alt="info" />
-            <p class="text-gray-primary text-sm">
-              Your subscription amount for subsequent months will be ₦112,000.
-            </p>
-          </div>
-        </section>
-
-        <a href="/confetti.html" class="btn-primary btn-view"
-          >View Laundry Frequency</a
-        >
-        <footer class="text-sm">
-          <p class="text-gray-primary">Not what you want?</p>
-          <a href="/confetti.html" class="text-green">Customise your plan.</a>
-        </footer>
+      <main class="pages">
+        <h2 class="header2">Hello &#128523;, Here's my work sample 2!</h2>
+        <a href="/plans.html" class="btn-primary btn-view">View Screen 5 </a>
+        <a href="/home.html" class="btn-primary btn-view">View Screen 8</a>
+        <a href="/confetti.html" class="btn-primary btn-view">View Screen 9</a>
       </main>
     </div>
 
